// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapRequestCompleted > updates a fresh swap request and associated quote if swap was (partially) refunded 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": {
    "channelOpenedAt": 2023-07-28T14:54:12.834Z,
    "destAsset": "HubDot",
    "executedAt": null,
    "executedPrice": null,
    "executedSlippagePercent": null,
    "expectedDepositAmount": "10000000000",
    "id": Any<Number>,
    "indexPriceAtChannelOpening": null,
    "indexPriceAtCompletion": "307.6923076923077",
    "inputAssetPriceAtChannelOpening": null,
    "inputAssetPriceAtCompletion": "2000",
    "livePriceSlippageTolerancePercent": null,
    "maxBoostFeeBps": 0,
    "numberOfChunks": null,
    "outputAssetPriceAtChannelOpening": null,
    "outputAssetPriceAtCompletion": "6.5",
    "quotedEgressAmount": "2000000",
    "quotedIntermediateAmount": null,
    "quotedPrice": "25000",
    "recommendedLivePriceSlippageTolerancePercent": null,
    "recommendedSlippageTolerancePercent": null,
    "refundedAt": 2022-12-06T14:31:45.000Z,
    "slippageTolerancePercent": null,
    "srcAsset": "Eth",
    "swapDepositChannelId": Any<BigInt>,
    "swapRequestId": Any<BigInt>,
    "swapRequestNativeId": 9876545n,
  },
  "refundEgressId": Any<BigInt>,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": 100n,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "1240000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates a stale swap request and associated quote if swap was (partially) refunded 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": {
    "channelOpenedAt": 2023-07-28T14:54:12.834Z,
    "destAsset": "HubDot",
    "executedAt": null,
    "executedPrice": null,
    "executedSlippagePercent": null,
    "expectedDepositAmount": "10000000000",
    "id": Any<Number>,
    "indexPriceAtChannelOpening": null,
    "indexPriceAtCompletion": null,
    "inputAssetPriceAtChannelOpening": null,
    "inputAssetPriceAtCompletion": null,
    "livePriceSlippageTolerancePercent": null,
    "maxBoostFeeBps": 0,
    "numberOfChunks": null,
    "outputAssetPriceAtChannelOpening": null,
    "outputAssetPriceAtCompletion": null,
    "quotedEgressAmount": "2000000",
    "quotedIntermediateAmount": null,
    "quotedPrice": "25000",
    "recommendedLivePriceSlippageTolerancePercent": null,
    "recommendedSlippageTolerancePercent": null,
    "refundedAt": 2022-12-06T14:31:45.000Z,
    "slippageTolerancePercent": null,
    "srcAsset": "Eth",
    "swapDepositChannelId": Any<BigInt>,
    "swapRequestId": Any<BigInt>,
    "swapRequestNativeId": 9876545n,
  },
  "refundEgressId": Any<BigInt>,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": 100n,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "1240000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates swap request and associated quote 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": {
    "channelOpenedAt": 2023-07-28T14:54:12.834Z,
    "destAsset": "HubDot",
    "executedAt": 2022-12-06T14:31:45.000Z,
    "executedPrice": "24800",
    "executedSlippagePercent": "0.8",
    "expectedDepositAmount": "10000000000",
    "id": Any<Number>,
    "indexPriceAtChannelOpening": null,
    "indexPriceAtCompletion": null,
    "inputAssetPriceAtChannelOpening": null,
    "inputAssetPriceAtCompletion": null,
    "livePriceSlippageTolerancePercent": null,
    "maxBoostFeeBps": 0,
    "numberOfChunks": null,
    "outputAssetPriceAtChannelOpening": null,
    "outputAssetPriceAtCompletion": null,
    "quotedEgressAmount": "2000000",
    "quotedIntermediateAmount": null,
    "quotedPrice": "25000",
    "recommendedLivePriceSlippageTolerancePercent": null,
    "recommendedSlippageTolerancePercent": null,
    "refundedAt": null,
    "slippageTolerancePercent": null,
    "srcAsset": "Eth",
    "swapDepositChannelId": Any<BigInt>,
    "swapRequestId": Any<BigInt>,
    "swapRequestNativeId": 9876545n,
  },
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": 100n,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2480000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates swap request with liquidation info - Aborted 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "liquidationSwapInfo": {
    "abortedAt": Any<Date>,
    "abortedAtBlockIndex": Any<String>,
    "accountId": "account-1",
    "completedAt": null,
    "completedAtBlockIndex": null,
    "id": Any<Number>,
    "loanId": Any<BigInt>,
    "refundAmount": "0",
    "swapRequestId": Any<BigInt>,
  },
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2500000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates swap request with liquidation info - Executed 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "liquidationSwapInfo": {
    "abortedAt": null,
    "abortedAtBlockIndex": null,
    "accountId": "account-1",
    "completedAt": Any<Date>,
    "completedAtBlockIndex": Any<String>,
    "id": Any<Number>,
    "loanId": Any<BigInt>,
    "refundAmount": "0",
    "swapRequestId": Any<BigInt>,
  },
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2500000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates swap request with multiple swaps 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "30000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": "-500",
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "30000000000",
  "swapOutputAmount": "7000000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequestCompleted > updates swap request with single swap 1`] = `
{
  "accountCreationDepositChannelId": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": 2022-12-06T14:31:45.000Z,
  "completedBlockIndex": "120-0",
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "HubDot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fallbackRefundEgressId": null,
  "fokMaxOraclePriceSlippageBps": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "oraclePriceDeltaBps": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "quote": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "2500000",
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;
